Fix layout issues for BasicLed

--- a/examples/basic-app/src/App.css
+++ b/examples/basic-app/src/App.css
@@ -1,7 +1,3 @@
-.Public {
-  margin: auto;
-}
-
 .BasicSide * {
   xcolor: white !important;
   xbackground-color: rgb(var(--vxg-cb1));
@@ -11,11 +7,38 @@
   height: 100vh;
 }
 
+.Public {
+  margin: auto;
+}
+
+.Private {
+  /* display: flex; */
+  height: 100%;
+  width: 100%;
+}
+
+.BasicAdmin {
+  height: 100%;
+  width: 100;
+}
+
 .BasicMain {
-  flex: 1;
+  /* flex: 1; */
   background-color: #eee;
-  overflow-y: auto;
   padding-top: 4rem;
+  height: calc(100% - 4rem);
+}
+
+.BasicMainDiv {
+  background-color: red;
+  overflow-y: auto;
+}
+
+.BasicLed {
+  background-color: green;
+  padding-top: 2rem;
+  padding-left: 2rem;
+  padding-right: 2rem;
 }
 
 .Chat {
