--- a/examples/basic-app/src/index.css
+++ b/examples/basic-app/src/index.css
@@ -13,8 +13,9 @@ body {
 }
 
 #root {
-    display: flex;
+    /* display: flex; */
     height: 100vh;
+    width: 100vw;
 }
 
 .MuiDataGrid-columnHeaderTitle {
